--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wave Store</title>
+    <title>Wave Foundation </title>
+<link rel="icon" href="Logo.png" type="image/png">
     
     <style>
         /* --- فونت اختصاصی --- */
@@ -160,4 +161,5 @@
     </div>
 
 </body>
+
 </html>
