--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Wave Store</title>
+    <title>About Us - Wave Foundation </title> 
+    <link rel="icon" href="Logo.png" type="image/png">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -149,4 +150,5 @@
     </main>
 
 </body>
+
 </html>
