--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Wave Store</title>
-    
+    <title>Wave Foundation - Contact Us </title> 
+    <link rel="icon" href="Logo.png" type="image/png">
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     
@@ -172,4 +172,5 @@
     </script>
 
 </body>
+
 </html>
