--- a/artists.html
+++ b/artists.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wave Store - Artists</title>
+    <title>Wave Foundation - Artists</title>
+    </title> <link rel="icon" href="Logo.png" type="image/png"> 
     
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -85,4 +86,5 @@
     </nav>
 
 </body>
+
 </html>
