--- a/artists.html
+++ b/artists.html
@@ -22,18 +22,18 @@
             animation: fadeIn 1.2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
         }
 
-        /* تنظیمات شدت نور */
+        /* تنظیمات شدت نور (فقط برای دسکتاپ که دکمه‌ها هستند استفاده می‌شود) */
         .fog-glow {
             background: radial-gradient(
                 circle, 
-                rgba(255, 255, 255, 0.25) 0%, 
-                rgba(255, 255, 255, 0.1) 40%, 
+                rgba(255, 255, 255, 0.35) 0%, 
+                rgba(255, 255, 255, 0.15) 40%, 
                 rgba(255, 255, 255, 0) 70%
             );
             opacity: 0; 
             transition: opacity 0.6s ease, transform 0.6s ease;
             border-radius: 50%; 
-            filter: blur(12px); 
+            filter: blur(15px); 
             transform: scale(0.8);
         }
 
@@ -44,17 +44,18 @@
 
         /* --- تنظیمات ریسپانسیو بک‌گراند --- */
         .responsive-bg {
-            /* حالت پیش‌فرض (موبایل) */
+            /* حالت پیش‌فرض (موبایل): عکس عمودی */
             background-image: url('Artists MB.jpg'); 
             background-size: cover;
-            background-position: center bottom;
+            background-position: center;
             background-repeat: no-repeat;
         }
 
-        /* وقتی عرض صفحه از 768 پیکسل بیشتر شد (تبلت و پیسی) */
+        /* وقتی عرض صفحه از 768 پیکسل بیشتر شد (تبلت و پی‌سی): عکس افقی */
         @media (min-width: 768px) {
             .responsive-bg {
                 background-image: url('Artists.jpg');
+                background-position: center bottom;
             }
         }
     </style>
@@ -62,16 +63,20 @@
 
 <body class="h-screen w-screen m-0 p-0 overflow-hidden bg-black relative">
 
-    <!-- کانتینر پس‌زمینه با کلاس جدید responsive-bg -->
+    <!-- کانتینر پس‌زمینه هوشمند -->
     <div class="absolute inset-0 w-full h-full z-0 responsive-bg"></div>
 
-    <!-- لوگو -->
+    <!-- لوگو (همیشه و همه‌جا دیده می‌شود) -->
     <a href="index.html" class="absolute top-8 left-1/2 transform -translate-x-1/2 z-30 w-28 h-auto opacity-80 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer">
         <img src="Logo.png" alt="Home" class="w-full h-auto object-contain drop-shadow-[0_0_15px_rgba(255,255,255,0.3)]">
     </a>
 
-    <!-- کانتینر دکمه‌ها -->
-    <nav class="absolute bottom-[3%] left-[18%] w-[64%] h-[14%] z-20 grid grid-cols-4 items-center justify-items-center gap-2" dir="ltr">
+    <!-- 
+        کانتینر دکمه‌ها
+        hidden: در حالت عادی (موبایل) مخفی است.
+        md:grid: در سایز مدیوم (تبلت/دسکتاپ) به بالا، تبدیل به گرید می‌شود و نمایش داده می‌شود.
+    -->
+    <nav class="absolute bottom-[3%] left-[18%] w-[64%] h-[14%] z-20 hidden md:grid grid-cols-4 items-center justify-items-center gap-2" dir="ltr">
         
         <!-- Link 1: PRESSA -->
         <a href="#" class="artist-link relative w-full h-full flex items-center justify-center fade-in" style="animation-delay: 0.1s;">
